--- a/images/ubuntu-desktop/Containerfile
+++ b/images/ubuntu-desktop/Containerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM docker.io/ubuntu:latest
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get upgrade --yes
 RUN yes | unminimize
